--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@masala/parser": "^1.0.0",
+    "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.12.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.37",
@@ -24,9 +26,11 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
-    "@types/react-copy-to-clipboard": "^5.0.4"
+    "@types/react-copy-to-clipboard": "^5.0.4",
+    "@types/validator": "^13.11.1"
   }
 }
